tests/baselines/reference/genericTypeUsedWithoutTypeArguments3.errors.txt
tests/cases/compiler/genericTypeUsedWithoutTypeArguments3.ts(2,26): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/genericTypeUsedWithoutTypeArguments3.ts (1 errors) ====
    interface Foo<T> { }
    interface Bar<T> extends Foo { }
                             ~~~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    